# TRIDENT-Net

./: .gitignore  COMPLETE_SUMMARY.md  GRADIO_GUI_USAGE.md  MEMORY_TRAINING.md  Makefile  README.md  STREAMLIT_GUI_GUIDE.md  VIDEO_PROCESSING_FIX.md  accelerate_setup.py  action_log.md  demonstrate_fix.py  gui_comparison_visual.txt  gui_demo.py  gui_demo_both.py  gui_mockup.txt  memory_training_examples.sh  pyproject.toml  requirements.txt  sklearn_stub.py  tasks.yml  test_chunking_fix.py  test_cpu_smoke.py  test_integration.py  test_smoke.py  timm_stub.py  tqdm_stub.py  trident_webui.py
configs/: README.md  a100_39gb_30gb_cpu.json  a100_39gb_70gb_ram_training.json  cpu_only_30gb_ram.json
data_gen/: colab_sdxl.ipynb
tests/: test_calibration_flow.py  test_class_embedding.py  test_dataset.py  test_determinism_amp.py  test_dtype_mismatch_fix.py  test_event_tokens.py  test_export.py  test_forward_pass.py  test_guard_postframe.py  test_hierarchy_fusion_loss.py  test_legacy_cleanup.py  test_memory_efficient_chunking.py  test_server.py  test_shapes.py  test_videox3d_kernel_fix.py
trident/: __init__.py  cli.py
trident/common/: __init__.py  calibration.py  export.py  losses.py  metrics.py  sdpa_attention.py  types.py  utils.py
trident/data/: __init__.py  collate.py  dataset.py  synthetic.py  transforms.py  video_ring.py
trident/fusion_guard/: __init__.py  calib_glm.py  cross_attn_fusion.py  f1_late_svm.py  f2_cross_attention.py  f3_fuzzy_rules.py  s_spoof_shield.py  spoof_shield.py
trident/gui/: __init__.py  app.py
trident/i_models/: __init__.py  i1_frag_cnn.py  i2_therm_att_v.py  i3_dual_vision.py
trident/r_models/: __init__.py  r1_echo_net.py  r2_pulse_lstm.py  r3_radar_former.py
trident/runtime/: __init__.py  cli.py  config.py  evaluator.py  graph.py  memory_efficient_cli.py  memory_efficient_trainer.py  registry.py  server.py  trainer.py
trident/t_models/: __init__.py  t1_plume_net.py  t2_cooling_curve.py
trident/trident_i/: __init__.py  dualvision.py  dualvision_v2.py  flashnet_v.py  frag3d.py  videox3d.py
trident/trident_r/: __init__.py  geomlp.py  kinefeat.py  tiny_temporal_former.py
trident/trident_t/: __init__.py  coolcurve3.py  ir_dettrack_v2.py  plumedet_lite.py
trident/xai_text/: __init__.py  small_llm_reporter.py  templater.py
trident_net.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
